# homework_spring2026

hw1/: .gitignore  pyproject.toml
hw1/scripts/: visualize_normalizer.py
