[project]
name = "hw1-imitation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.4.1",
    "gym-pusht>=0.1.6",
    "imageio>=2.37.2",
    "imageio-ffmpeg>=0.6.0",
    "modal>=1.2.6",
    "pymunk<7",
    "ruff>=0.14.10",
    "setuptools>=80.9.0",
    "torch>=2.9.1",
    "tyro>=1.0.3",
    "wandb==0.23.1",
    "zarr>=3.1.5",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "matplotlib>=3.11.0",
]
